--- a/package.json
+++ b/package.json
@@ -2,18 +2,31 @@
   "name": "comment-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
+    "babel-plugin-dynamic-import-node": "^2.0.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react-app": "^3.1.1",
+    "express": "^4.16.3",
+    "file-loader": "^1.1.6",
+    "ignore-styles": "^5.0.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-loadable": "^5.3.1",
     "react-redux": "^5.1.0",
     "react-scripts": "2.1.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "serialize-javascript": "^1.5.0",
+    "url-loader": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "NODE_ENV=production node ./server/bootstrap.js"
   },
   "eslintConfig": {
     "extends": "react-app"
