--- a/package.json
+++ b/package.json
@@ -2,19 +2,29 @@
   "name": "comment-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
   "dependencies": {
-    "babel-plugin-dynamic-import-node": "^2.0.0",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react-app": "^3.1.1",
-    "express": "^4.16.3",
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "babel-plugin-dynamic-import-node": "^2.1.0",
+    "connected-react-router": "^4.5.0",
+    "cookie-parser": "^1.4.3",
+    "cross-env": "^5.2.0",
     "file-loader": "^1.1.6",
+    "forcedomain": "^1.0.0",
     "ignore-styles": "^5.0.1",
+    "js-cookie": "^2.2.0",
+    "md5-file": "^4.0.0",
+    "morgan": "^1.9.1",
+    "query-string": "^6.2.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-frontload": "^1.0.3",
+    "react-helmet": "^5.2.0",
     "react-loadable": "^5.3.1",
     "react-redux": "^5.1.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
@@ -26,7 +36,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "serve": "NODE_ENV=production node ./server/bootstrap.js"
+    "serve": "cross-env NODE_ENV=production node ./server/index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -36,5 +46,15 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
+  },
+  "devDependencies": {
+    "husky": "^1.1.0",
+    "prettier": "1.14.3",
+    "pretty-quick": "^1.7.0"
+  }
 }
